main_stylesheet.css
html {
	position: relative;
	min-height: 100%;
}

body {
	margin: 0 0 100px;
    padding: 5%;
    font-size: 1.5em;
    color: #686963;
    background-color: #FAFAFA;
}

p, a, table, dl {
    font-family: 'Open Sans', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Proza Libre', sans-serif;
}

/* nav styling */
.logo {
	display: inline-block;
	vertical-align: middle;
	width: 15%;
  }
  
  .logo img {
	height: 200px;
	width: 350px;
  }

  .nav {
	display: inline-block;
	vertical-align: middle;
	width: 83%;
	text-align: right;
  }

ul.nav li {
	display: inline-block;
	margin-right: 5%;
}

ul.nav a {
	border-bottom: none;
	color: #686963;
}

ul.nav a.current {
	border-bottom: 10px solid darkgreen;
}

footer {
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	background-color: #686963;
	color: #FAFAFA;
	text-align: center;
  }

footer p {
	padding: 5px;
  }

a {
	border-bottom: 3px solid darkgreen;
	color: #686963;
	text-decoration: none;
}

a.logo {
	border-bottom: none;
}

a:hover, a:focus, a:active {
	color: darkgreen;
}

a:visited {
	color: #0b0080;
	border-bottom: 7px solid darkgreen;
}

/* Table styling */
table { 
    width: 100%; 
    border-collapse: collapse; 
  }
  /* Zebra striping */
  tr:nth-of-type(odd) { 
    background: #eee; 
  }
  th { 
    background: #333; 
    color: white; 
    font-weight: bold; 
  }
  td, th { 
    padding: 6px; 
    border: 1px solid #ccc; 
    text-align: left; 
  }

  /* 
Max width before this PARTICULAR table gets nasty
This query will take effect for any screen smaller than 760px
and also iPads specifically.
*/
@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

	/* Force table to not be like tables anymore */
	caption, table, thead, tbody, th, td, tr { 
		display: block; 
	}
	
	/* Hide table headers (but not display: none;, for accessibility) */
	thead tr {
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { border: 1px solid #ccc; }
	
	td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
	}
	
	td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}
	
	/*
	Label the data
	*/
	td:nth-of-type(1):before { content: "Job Title"; }
	td:nth-of-type(2):before { content: "Location"; }
	td:nth-of-type(3):before { content: "Time Period"; }
	}

